--- a/main.css
+++ b/main.css
@@ -118,3 +118,15 @@ span {
     ;
 
 }
+
+a {
+
+font-size: 30px;
+margin-top: 100px;
+margin-left: 20px;
+    color: beige;
+}
+
+a:hover {
+    text-decoration: none;
+   }
